css/main.css
html,
body {
    position: absolute;
    text-align: center;
    font-family: 'Comfortaa', bold;
    background: RGB(10, 10, 10);
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%); /* IE 9 */
    -webkit-transform: translate(-50%, -50%); /* Chrome, Safari, Opera */	    
}

::-webkit-scrollbar {
    width: 0px;
    background: transparent;
}

img {
  border-radius: 50%;
  width: 128px;
  margin-top: -8%;
  float: right;
}

/* cool hue thing */

.fadedivider {
    height: 40px;
    width: 100vw;
    background: hsl(348, 100%, 61%); /* Old browsers */
  }
    
  .fadedivider.animated {
    -webkit-animation: filter-animation 8s infinite;
    animation: filter-animation 8s infinite;
  }
  
  @-webkit-keyframes filter-animation { 
    0% {
        -webkit-filter: hue-rotate(0deg);
      }
    10% {
        -webkit-filter: hue-rotate(36deg);
      }
    20% {
        -webkit-filter: hue-rotate(74deg);
      }
    30% {
        -webkit-filter: hue-rotate(108deg);
      }
    40% {
        -webkit-filter: hue-rotate(144deg);
      }
    50% {
        -webkit-filter: hue-rotate(180deg);
      }
    60% {
        -webkit-filter: hue-rotate(216deg);
      }
    70% {
        -webkit-filter: hue-rotate(252deg);
      }
    80% {
        -webkit-filter: hue-rotate(288deg);
      }
    90% {
        -webkit-filter: hue-rotate(324deg);
      }
    100% {
        -webkit-filter: hue-rotate(360deg);
      }

  }
  
  @keyframes filter-animation {
      0% {
        -webkit-filter: hue-rotate(0deg);
      }
      
      25% {
        -webkit-filter: hue-rotate(90deg);
      }
      
      50% {
        -webkit-filter: hue-rotate(180deg);
      }
  
      75% {
          -webkit-filter: hue-rotate(270deg);
        }
        
      100% {
          -webkit-filter: hue-rotate(360deg);
      }
    }

